# profitable

./: .gitignore  CLAUDE.md  pyproject.toml
db/: schema.sql  seed_data.sql
engine/: __init__.py  balance_harness.py  craft_engine.py  market.py  namegen.py  refine.py  roll_batch.py  universe.py  worldgen.py
gui/: __init__.py  app.py
packaging/: profitable-shell.bat  profitable.iss  profitable.spec
scripts/: __init__.py  build_db.py  cli.py
tests/: test_craft_engine.py
